# Mesen2

Android/: gradle.properties  gradlew  settings.gradle.kts
Android/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: android_audio.cpp  android_audio.h  android_key_manager.h  android_renderer.cpp  android_renderer.h  mesen_jni.cpp
Android/app/src/main/kotlin/com/mesen2/android/: EmulatorActivity.kt  EmulatorGLSurfaceView.kt  MainActivity.kt  NativeLib.kt  TouchControllerView.kt
Android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
Android/app/src/main/res/layout/: activity_emulator.xml  activity_main.xml
Android/app/src/main/res/menu/: menu_main.xml
Android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/gradle/: libs.versions.toml
